# cinema_night

./: .dockerignore  .env  .env.example  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 39639ec21792_halls.py  4cc716d9987a_users.py  5ae24caa7e96_unique_username.py  ac9c90590731_set_server_defaults.py  c732426d44c1_movies.py  cee8c8dc26ec_default_value_for_permission.py  fb9c16bd7861_init.py
src/: main.py
src/api/: __init__.py
src/api/v1/: __init__.py  auth.py  halls.py  movies.py  users.py
src/core/: config.py  init_api.py
src/database/: __init__.py  base.py
src/database/auth/: schemas.py
src/database/halls/: models.py  repository.py  schemas.py
src/database/movies/: models.py  repository.py  schemas.py
src/database/users/: models.py  repository.py  schemas.py
src/dependencies/: auth.py  permission.py  permissions.py  unit_of_work.py  users.py
src/permissions/: base.py  halls.py  movies.py  roles.py  user.py
src/services/: auth.py  halls.py  movies.py  users.py
src/utils/: auth.py  logger.py  repository.py  unit_of_work.py
tests/: conftest.py  test_user.py
